# BitBase

./: .gitignore  CMakeLists.txt  test.db
BitChat/: Readme.md
BitChat/Header_Files/: Chat.h  DirectChat.h
BitChat/Source_Files/: Chat.cpp  ChatService.cpp
Task-1/: readMe.md
Task-1/Source_Files/: Main.cpp  User.cpp
Task-2/: Main.cpp  Producers_consumers.cpp
Task-2/Synchronization Problems/: Dining_philosophers.cpp
Task-3/: B-Tree.cpp  Red_Black_Trees.cpp
bitbase_cli/: CMakeLists.txt
bitbase_cli/include/executor/: executor.h
bitbase_cli/include/meta/: meta.h
bitbase_cli/include/parser/: statement.h
bitbase_cli/include/storage/btree/: node.h
bitbase_cli/include/storage/database/: database.h
bitbase_cli/include/storage/pager/: pager.h
bitbase_cli/include/storage/row_format/: dynamic_row_format.h  row_format.h
bitbase_cli/include/storage/schema/: column.h  row.h  schema.h  value.h
bitbase_cli/include/storage/table/: row.h  table.h
bitbase_cli/src/: main.cpp
bitbase_cli/src/executor/: executor.cpp
bitbase_cli/src/meta/: meta.cpp
bitbase_cli/src/parser/: parser.cpp
bitbase_cli/src/repl/: repl.cpp
bitbase_cli/src/storage/btree/: node.cpp
bitbase_cli/src/storage/database/: database.cpp
bitbase_cli/src/storage/pager/: pager.cpp
bitbase_cli/src/storage/row_format/: dynamic_row_format.cpp  row_format.cpp
bitbase_cli/src/storage/schema/: schema.cpp
bitbase_cli/src/storage/table/: table.cpp
bitbase_cli/src/utils/: string_utils.cpp  tokenizer.cpp
frontend/Source_Files/: main.cpp
tasks/Task-3/: B+Tree.cpp
(+25 files in other folders)
